fix: rename cluster variable name in clustering and visualization tests

--- a/tutorials/biorsp.ipynb
+++ b/tutorials/biorsp.ipynb
@@ -43,7 +43,7 @@
     "    - background_points: A numpy array of (x, y) coordinates for all cells (or cells in selected clusters).\n",
     "    \"\"\"\n",
     "\n",
-    "    dbscan_clusters = dbscan_df[\"Cluster\"].values\n",
+    "    dbscan_clusters = dbscan_df[\"cluster\"].values\n",
     "\n",
     "    if len(dbscan_clusters) != tsne_results.shape[0]:\n",
     "        raise ValueError(\n",
