--- a/tutorials/dimreduction_clustering.ipynb
+++ b/tutorials/dimreduction_clustering.ipynb
@@ -118,7 +118,7 @@
     "scatter = plt.scatter(\n",
     "    tsne_results[:, 0], tsne_results[:, 1], c=dbscan_labels, s=1, cmap=\"tab20\"\n",
     ")\n",
-    "# legend = plt.legend(*scatter.legend_elements(), title=\"Cluster\")\n",
+    "# legend = plt.legend(*scatter.legend_elements(), title=\"cluster\")\n",
     "\n",
     "# for i in range(len(legend.get_texts())):\n",
     "#     legend.get_texts()[i].set_text(f\"{i}\")\n",
@@ -130,7 +130,7 @@
     "plt.show()\n",
     "tsne_dbscan_fig.savefig(\"figures/tsne_dbscan_plot.png\")\n",
     "\n",
-    "dbscan_results_df = pd.DataFrame(dbscan_labels, columns=[\"Cluster\"])\n",
+    "dbscan_results_df = pd.DataFrame(dbscan_labels, columns=[\"cluster\"])\n",
     "dbscan_results_df.to_csv(\"embeddings/tsne_dbscan_results.csv\", index=False)"
    ]
   },
@@ -151,7 +151,7 @@
     "scatter = plt.scatter(\n",
     "    umap_results[:, 0], umap_results[:, 1], c=dbscan_labels, s=1, cmap=\"tab20\"\n",
     ")\n",
-    "# legend = plt.legend(*scatter.legend_elements(), title=\"Cluster\")\n",
+    "# legend = plt.legend(*scatter.legend_elements(), title=\"cluster\")\n",
     "\n",
     "# for i in range(len(legend.get_texts())):\n",
     "#     legend.get_texts()[i].set_text(f\"{i}\")\n",
@@ -163,7 +163,7 @@
     "plt.show()\n",
     "umap_dbscan_fig.savefig(\"figures/umap_dbscan_plot.png\")\n",
     "\n",
-    "dbscan_results_df = pd.DataFrame(dbscan_labels, columns=[\"Cluster\"])\n",
+    "dbscan_results_df = pd.DataFrame(dbscan_labels, columns=[\"cluster\"])\n",
     "dbscan_results_df.to_csv(\"embeddings/umap_dbscan_results.csv\", index=False)"
    ]
   }
