feat: add new correlation analysis notebook

--- a/tutorials/correlation.ipynb
+++ b/tutorials/correlation.ipynb
@@ -1,108 +1,250 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Correlation analysis\n",
-    "\n",
-    "This notebook demonstrates how to calculate the correlation between two RSP profiles."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "# from scipy.stats import pearsonr\n",
+    "from kneed import KneeLocator\n",
     "\n",
-    "from ipynb.fs.full.biorsp import (\n",
-    "    find_foreground_background_points,\n",
+    "from biorsp.analysis.find_points import find_foreground_background_points\n",
+    "from biorsp.analysis.rsp_calculations import (\n",
+    "    calculate_rsp_area,\n",
     "    calculate_differences,\n",
-    "    convert_to_polar,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dge_matrix = pd.read_csv(\"data/MCA2_filtered.dge.txt\", sep=\"\\t\", index_col=0)\n",
-    "tsne_results = pd.read_csv(\"embeddings/tsne_results.csv\").to_numpy()\n",
-    "dbscan_results = pd.read_csv(\"embeddings/tsne_dbscan_results.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gene_name_1 = \"Tnnt2\"  # Change this to your first gene of interest\n",
-    "gene_name_2 = \"Actc1\"  # Change this to your second gene of interest\n",
-    "threshold = 1  # Define the threshold for foreground points\n",
-    "clusters = [1]  # Define the clusters to be considered as foreground\n",
-    "\n",
-    "# bioRSP-specific parameters\n",
-    "scanning_window = np.pi\n",
-    "resolution = 1000\n",
-    "angle_range = np.array([0, 2 * np.pi])\n",
-    "mode = \"absolute\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract foreground and background points for the first gene\n",
-    "foreground_points_1, background_points = find_foreground_background_points(\n",
-    "    gene_name=gene_name_1,\n",
-    "    dge_matrix=dge_matrix,\n",
-    "    tsne_results=tsne_results,\n",
-    "    threshold=threshold,\n",
-    "    dbscan_df=dbscan_results,\n",
-    "    selected_clusters=clusters,\n",
+    "    calculate_rmsd,\n",
+    "    calculate_deviation_score,\n",
     ")\n",
+    "from biorsp.preprocessing.filtering import filter_dge_matrix\n",
+    "from biorsp.preprocessing.dimensionality_reduction import compute_tsne\n",
+    "from biorsp.preprocessing.clustering import compute_dbscan\n",
+    "# from biorsp.visualization.embedding import plot_embedding\n",
+    "# from biorsp.visualization.rsp import (\n",
+    "#     plot_foreground_background,\n",
+    "#     plot_rsp_polar,\n",
+    "#     plot_rsp_comparison,\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_knee_point(\n",
+    "    rsp_results_df, column_name, curve=\"convex\", direction=\"decreasing\"\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Find the knee point of the specified column in the dataframe using the Kneedle algorithm.\n",
+    "    Parameters:\n",
+    "    - rsp_results_df: DataFrame containing the RSP results.\n",
+    "    - column_name: The name of the column for which to find the knee point.\n",
+    "    - curve: Shape of the curve ('concave' or 'convex'). Adjust based on the plot shape.\n",
+    "    - direction: Direction of the curve ('increasing' or 'decreasing').\n",
+    "    Returns:\n",
+    "    - knee_point: The value of the knee point in the specified column.\n",
+    "    \"\"\"\n",
+    "    sorted_values = np.sort(rsp_results_df[column_name].values)\n",
+    "    x = np.arange(len(sorted_values))\n",
+    "    y = sorted_values\n",
+    "    knee_locator = KneeLocator(x, y, curve=curve, direction=direction, online=True)\n",
+    "    knee_value = knee_locator.knee_y if knee_locator.knee_y else sorted_values[-1]\n",
+    "    return knee_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_data(dge_matrix_path):\n",
+    "    \"\"\"\n",
+    "    Preprocess the DGE matrix by filtering low-expression genes and cells.\n",
+    "    \"\"\"\n",
+    "    dge_matrix = pd.read_csv(dge_matrix_path, sep=\"\\t\", index_col=0)\n",
+    "    dge_matrix_filtered = filter_dge_matrix(\n",
+    "        dge_matrix, threshold_umi=500, threshold_gene=1\n",
+    "    )\n",
+    "    print(f\"Filtered DGE matrix with shape: {dge_matrix_filtered.shape}\")\n",
+    "    return dge_matrix_filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_embeddings_and_clusters(dge_matrix_filtered, tsne_path, dbscan_path):\n",
+    "    \"\"\"\n",
+    "    Compute t-SNE embeddings and DBSCAN clustering.\n",
+    "    \"\"\"\n",
+    "    tsne_results = compute_tsne(dge_matrix_filtered, perplexity=30, random_state=42)\n",
+    "    dbscan_results = compute_dbscan(tsne_results, eps=4, min_samples=50)\n",
     "\n",
-    "# Extract foreground and background points for the second gene\n",
-    "# Background points for the second gene are the same as the first gene\n",
-    "foreground_points_2, _ = find_foreground_background_points(\n",
-    "    gene_name=gene_name_2,\n",
-    "    dge_matrix=dge_matrix,\n",
-    "    tsne_results=tsne_results,\n",
-    "    threshold=threshold,\n",
-    "    dbscan_df=dbscan_results,\n",
-    "    selected_clusters=clusters,\n",
-    ")"
+    "    pd.DataFrame(tsne_results, columns=[\"x\", \"y\"]).to_csv(\n",
+    "        f\"../data/{tsne_path}\", index=False\n",
+    "    )\n",
+    "    dbscan_df = pd.DataFrame(dbscan_results, columns=[\"cluster\"])\n",
+    "    dbscan_df.to_csv(f\"../data/{dbscan_path}\", index=False)\n",
+    "\n",
+    "    print(f\"Computed t-SNE results with shape: {tsne_results.shape}\")\n",
+    "    print(f\"Computed DBSCAN results with unique clusters: {set(dbscan_results)}\")\n",
+    "\n",
+    "    return tsne_results, dbscan_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate vantage points\n",
-    "vantage_point = background_points.mean(axis=0)"
+    "def run_biorsp_analysis(\n",
+    "    dge_matrix_filtered, tsne_results, dbscan_df, selected_clusters=None\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Run bioRSP analysis for all genes in the filtered DGE matrix.\n",
+    "    \"\"\"\n",
+    "    rsp_results = []\n",
+    "    for gene in dge_matrix_filtered.index:\n",
+    "        fg_points, bg_points = find_foreground_background_points(\n",
+    "            gene_name=gene,\n",
+    "            dge_matrix=dge_matrix_filtered,\n",
+    "            tsne_results=tsne_results,\n",
+    "            dbscan_df=dbscan_df,\n",
+    "            threshold=1,\n",
+    "            selected_clusters=selected_clusters,\n",
+    "        )\n",
+    "        if len(fg_points) / len(bg_points) < 0.05:\n",
+    "            continue\n",
+    "\n",
+    "        differences = calculate_differences(\n",
+    "            fg_points,\n",
+    "            bg_points,\n",
+    "            scanning_window=np.pi / 2,\n",
+    "            resolution=1000,\n",
+    "            vantage_point=bg_points.mean(axis=0),\n",
+    "            angle_range=np.array([0, 2 * np.pi]),\n",
+    "            mode=\"absolute\",\n",
+    "        )\n",
+    "        rsp_area = calculate_rsp_area(\n",
+    "            differences, angle_range=[0, 2 * np.pi], resolution=1000\n",
+    "        )\n",
+    "        rmsd = calculate_rmsd(differences)\n",
+    "        deviation_score = calculate_deviation_score(\n",
+    "            rsp_area, differences, 1000, [0, 2 * np.pi]\n",
+    "        )\n",
+    "\n",
+    "        rsp_results.append(\n",
+    "            {\n",
+    "                \"Gene\": gene,\n",
+    "                \"RSP_Area\": rsp_area,\n",
+    "                \"RMSD\": rmsd,\n",
+    "                \"Deviation_Score\": deviation_score,\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    return pd.DataFrame(rsp_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert to polar coordinates\n",
-    "fg_r_1, fg_theta_1 = convert_to_polar(foreground_points_1, vantage_point)\n",
-    "fg_r_2, fg_theta_2 = convert_to_polar(foreground_points_2, vantage_point)\n",
-    "bg_r, bg_theta = convert_to_polar(background_points, vantage_point)"
+    "def filter_significant_genes(\n",
+    "    rsp_results_df, area_threshold=0.1, deviation_threshold=0.5\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Filter genes with significant spatial differences based on RSP area and deviation scores.\n",
+    "    \"\"\"\n",
+    "    significant_genes = rsp_results_df[\n",
+    "        (rsp_results_df[\"RSP_Area\"] < area_threshold)\n",
+    "        & (rsp_results_df[\"Deviation_Score\"] > deviation_threshold)\n",
+    "    ][\"Gene\"].tolist()\n",
+    "    print(\n",
+    "        f\"Identified {len(significant_genes)} candidate genes with significant spatial differences.\"\n",
+    "    )\n",
+    "    return significant_genes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gene_to_gene_correlation(dge_matrix_filtered, candidate_genes):\n",
+    "    \"\"\"\n",
+    "    Perform gene-to-gene correlation analysis for selected candidate genes.\n",
+    "    \"\"\"\n",
+    "    candidate_expression = dge_matrix_filtered.loc[candidate_genes].T\n",
+    "    correlation_matrix = candidate_expression.corr(method=\"pearson\")\n",
+    "    plt.figure(figsize=(12, 10))\n",
+    "    sns.heatmap(correlation_matrix, cmap=\"coolwarm\", center=0, annot=False)\n",
+    "    plt.title(\"Gene-to-Gene Correlation among Candidate Genes\")\n",
+    "    plt.show()\n",
+    "    return correlation_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_full_analysis_workflow(\n",
+    "    dge_matrix_path, tsne_path, dbscan_path, selected_clusters=None, top_n=20\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Execute the full analysis workflow for all genes.\n",
+    "    \"\"\"\n",
+    "    dge_matrix_filtered = preprocess_data(dge_matrix_path)\n",
+    "    tsne_results, dbscan_df = compute_embeddings_and_clusters(\n",
+    "        dge_matrix_filtered, tsne_path, dbscan_path\n",
+    "    )\n",
+    "    rsp_results_df = run_biorsp_analysis(\n",
+    "        dge_matrix_filtered,\n",
+    "        tsne_results,\n",
+    "        dbscan_df,\n",
+    "        selected_clusters,\n",
+    "    )\n",
+    "    print(\"Completed bioRSP analysis.\")\n",
+    "\n",
+    "    # area_threshold = find_knee_point(rsp_results_df, \"RSP_Area\", curve=\"convex\", direction=\"increasing\")\n",
+    "    # deviation_threshold = find_knee_point(rsp_results_df, \"Deviation_Score\", curve=\"concave\", direction=\"increasing\")\n",
+    "    rsp_areas = rsp_results_df[\"RSP_Area\"].tolist()\n",
+    "    top_rsp_area = sorted(rsp_areas)[:top_n]\n",
+    "    area_threshold = max(top_rsp_area)\n",
+    "\n",
+    "    deviation_scores = rsp_results_df[\"Deviation_Score\"].tolist()\n",
+    "    top_deviation = sorted(deviation_scores, reverse=True)[:top_n]\n",
+    "    deviation_threshold = min(top_deviation)\n",
+    "\n",
+    "    candidate_genes = filter_significant_genes(\n",
+    "        rsp_results_df, area_threshold, deviation_threshold\n",
+    "    )\n",
+    "\n",
+    "    correlation_matrix = gene_to_gene_correlation(dge_matrix_filtered, candidate_genes)\n",
+    "    print(\"Completed gene-to-gene correlation analysis.\")\n",
+    "\n",
+    "    rsp_results_df.to_csv(\n",
+    "        f\"../data/results/biorsp_results_{selected_clusters}_{top_n}.csv\", index=False\n",
+    "    )\n",
+    "    correlation_matrix.to_csv(\n",
+    "        f\"../data/results/gene_correlation_matrix_{selected_clusters}_{top_n}.csv\"\n",
+    "    )\n",
+    "    print(\"Saved analysis results.\")"
    ]
   },
   {
@@ -111,63 +253,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate RSP differences for each gene\n",
-    "coverage = len(foreground_points_1) / len(background_points)\n",
-    "print(f\"Coverage: {coverage}\")\n",
+    "if __name__ == \"__main__\":\n",
+    "    dge_matrix_path = \"../data/dge/GSM4647185_FetalHeart_1_dge.txt\"\n",
+    "    tsne_path = \"tsne_results.csv\"\n",
+    "    dbscan_path = \"tsne_dbscan_results.csv\"\n",
     "\n",
-    "differences_1 = calculate_differences(\n",
-    "    foreground_points=foreground_points_1,\n",
-    "    background_points=background_points,\n",
-    "    scanning_window=scanning_window,\n",
-    "    resolution=resolution,\n",
-    "    vantage_point=vantage_point,\n",
-    "    angle_range=angle_range,\n",
-    "    mode=mode,\n",
-    ")\n",
-    "\n",
-    "coverage = len(foreground_points_2) / len(background_points)\n",
-    "print(f\"Coverage: {coverage}\")\n",
-    "\n",
-    "differences_2 = calculate_differences(\n",
-    "    foreground_points=foreground_points_2,\n",
-    "    background_points=background_points,\n",
-    "    scanning_window=scanning_window,\n",
-    "    resolution=resolution,\n",
-    "    vantage_point=vantage_point,\n",
-    "    angle_range=angle_range,\n",
-    "    mode=mode,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot RSP curves for both genes on the same graph\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.subplot(polar=True)\n",
-    "\n",
-    "plt.plot(\n",
-    "    np.linspace(0, 2 * np.pi, 1000),\n",
-    "    differences_1,\n",
-    "    color=\"green\",\n",
-    "    label=f\"{gene_name_1} RSP\",\n",
-    "    alpha=0.8,\n",
-    ")\n",
-    "plt.plot(\n",
-    "    np.linspace(0, 2 * np.pi, 1000),\n",
-    "    differences_2,\n",
-    "    color=\"blue\",\n",
-    "    label=f\"{gene_name_2} RSP\",\n",
-    "    alpha=0.8,\n",
-    ")\n",
-    "\n",
-    "# plt.ylim(0, 1)\n",
-    "plt.legend()\n",
-    "plt.title(f\"RSP Comparison of {gene_name_1} and {gene_name_2}\")\n",
-    "plt.show()"
+    "    run_full_analysis_workflow(\n",
+    "        dge_matrix_path, tsne_path, dbscan_path, selected_clusters=[1], top_n=20\n",
+    "    )"
    ]
   }
  ],
@@ -187,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
